--- a/BlazorGoogleMap/Pages/Index.razor
+++ b/BlazorGoogleMap/Pages/Index.razor
@@ -7,22 +7,24 @@
             <button @onclick="@DisplayPosition">Посмотреть позиции</button>
         </h3>
 
+        @*<RadzenGoogleMap style="height: 600px;" Zoom="@zoom" Center="@(new GoogleMapPosition() {Lat = 42.6977, Lng = 23.3219})"
+                         MapClick="@OnMapClick" MarkerClick="@OnMarkerClick" Data="@positions">*@
         <RadzenGoogleMap style="height: 600px;" Zoom="@zoom" Center="@(new GoogleMapPosition() {Lat = 42.6977, Lng = 23.3219})"
-                         MapClick="@OnMapClick" MarkerClick="@OnMarkerClick" Data="@positions">
-            @*<Markers >
+                         MapClick="@OnMapClick" MarkerClick="@OnMarkerClick">
+            <Markers >
         
                 @if (searchPosition)
                 {
-                    foreach (var item in googleMapPositions)
+                    foreach (KeyValuePair<int, GoogleMapPosition> entry in driversPositions)
                     {
-                        <RadzenGoogleMapMarker Title="Paris" Label="Paris" Position="@item" />
-
+                        <RadzenGoogleMapMarker Title="Paris" Label="Paris" Position="@entry.Value" />
                     }
+                    
                     
                 }
 
 
-            </Markers>*@
+            </Markers>
         </RadzenGoogleMap>
     </div>
 
@@ -52,83 +54,140 @@
         clickedPosition = $"Map {args.Title} clicked LAT: {args.Position.Lat}, LNG: {args.Position.Lng}";
     }
 
-    List<RadzenGoogleMapMarker> positions;
+    List<RadzenGoogleMapMarker> positions = new List<RadzenGoogleMapMarker>()
+    {
+        new RadzenGoogleMapMarker()
+        {
+            Position = new GoogleMapPosition() {Lat = 42.69511995155306, Lng = 23.323037256622303}
+        },
+        new RadzenGoogleMapMarker()
+        {
+            Position = new GoogleMapPosition() {Lat = 42.698778668389004, Lng = 23.31539832534789}
+        },
+        new RadzenGoogleMapMarker()
+        {
+            Position = new GoogleMapPosition() {Lat = 42.6979586299108, Lng = 23.311321367645252}
+        }
+    };
+
+
+    //  Расскомментировать в случае нужды
+
+
+    //bool isClientExist = await db1.ClientViews.AnyAsync(c => c.KlNdok == cl.passportInn && c.KlKl == 2 && c.KlTel1.StartsWith("996") && c.KlTel1.Length == 12);
+    //      if (isClientExist)
+
+
+    //  Конец фрагмента
+
+
+
 
     List<GoogleMapPosition> googleMapPositions;
+
+    Dictionary<int, GoogleMapPosition> driversPositions = new Dictionary<int, GoogleMapPosition>()
+    {
+        {1, new GoogleMapPosition() { Lat = 42.69511995155306, Lng = 23.323037256622303 } },
+        {2, new GoogleMapPosition() { Lat = 42.698778668389004, Lng = 23.31539832534789 } },
+    };
     async Task DisplayPosition()
     {
         searchPosition = true;
 
-        for (int i = 0; i < 3; i++)
-        {
-            if (i == 1)
-            {
-                positions = new List<RadzenGoogleMapMarker>()
-                {
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.69511995155306, Lng = 23.323037256622303}
-                    },
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.698778668389004, Lng = 23.31539832534789}
-                    },
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.6979586299108, Lng = 23.311321367645252}
-                    }
-                };
-                await Task.Delay(3000);
-            }
+        //for (int i = 0; i < 4; i++)
+        //{
+        //    if (i == 1)
+        //    {
+        //        positions = new List<RadzenGoogleMapMarker>()
+        //        {
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69511995155306, Lng = 23.323037256622303}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.698778668389004, Lng = 23.31539832534789}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.6979586299108, Lng = 23.311321367645252}
+        //            }
+        //        };
+        //        await Task.Delay(3000);
+        //    }
 
-            if (i == 2)
-            {
-                positions = new List<RadzenGoogleMapMarker>()
-                {
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.69288045817453, Lng = 23.329903711700428}
-                    },
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.69168182290715, Lng = 23.3290883201599}
-                    },
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.69042007658193, Lng = 23.319689859771717}
-                    }
-                };
-                await Task.Delay(3000);
-            }
+        //    if (i == 2)
+        //    {
+        //        positions = new List<RadzenGoogleMapMarker>()
+        //        {
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69288045817453, Lng = 23.329903711700428}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69168182290715, Lng = 23.3290883201599}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69042007658193, Lng = 23.319689859771717}
+        //            }
+        //        };
+        //        await Task.Delay(3000);
+        //    }
 
-            if (i == 3)
-            {
-                positions = new List<RadzenGoogleMapMarker>()
-                {
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.69209188494396, Lng = 23.31436835708617}
-                    },
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.692975086289366, Lng = 23.330161203765858}
-                    },
-                    new RadzenGoogleMapMarker()
-                    {
-                        Position = new GoogleMapPosition() {Lat = 42.6998825492388, Lng = 23.319518198394764}
-                    }
-                };
-                await Task.Delay(3000);
-            }
-        }
-        
-        
+        //    if (i == 3)
+        //    {
+        //        positions = new List<RadzenGoogleMapMarker>()
+        //        {
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69209188494396, Lng = 23.31436835708617}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.692975086289366, Lng = 23.330161203765858}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.6998825492388, Lng = 23.319518198394764}
+        //            }
+        //        };
+        //        await Task.Delay(3000);
+        //    }
+
+        //    if (i == 4)
+        //    {
+        //        if (i == 2)
+        //        {
+        //            positions = new List<RadzenGoogleMapMarker>()
+        //        {
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69288045817453, Lng = 23.329903711700428}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69168182290715, Lng = 23.3290883201599}
+        //            },
+        //            new RadzenGoogleMapMarker()
+        //            {
+        //                Position = new GoogleMapPosition() {Lat = 42.69042007658193, Lng = 23.319689859771717}
+        //            }
+        //        };
+        //            await Task.Delay(3000);
+        //        }
+        //    }
+        //}
+
+
 
         //googleMapPositions = new List<GoogleMapPosition>()
         //{
         //    new GoogleMapPosition() { Lat = 42.69511995155306, Lng = 23.323037256622303 },
         //    new GoogleMapPosition() {Lat = 42.698778668389004, Lng = 23.31539832534789}
         //};
-        
+        await Task.Delay(3000);
+
     }
 }
